# music-dashboard

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: etl-demo.yaml  etl-recent-history.yaml  etl-workflow.yaml  main.yml  test-workflow.yaml
data/: foo.json
data retrieval/: get_artist_data.py  get_recent_history.py  get_track_data.py  jsonl_to_parquet.py  lastfm_listening.py  loading.py  test_retrieval.py
data retrieval/logs/: get_track_data_2026-04-13.log.1  get_track_data_2026-04-13.log.2
data/lastfm/: lastfm-listening-2021-2026march.parquet
data/lastfm/listening/: lastfm_listening_data 2026-04-30_0001.jsonl  lastfm_listening_data 2026-04-30_0002.jsonl  lastfm_listening_data 2026-04-30_0003.jsonl  lastfm_listening_data 2026-04-30_0004.jsonl  lastfm_listening_data 2026-04-30_0005.jsonl  lastfm_listening_data 2026-04-30_0006.jsonl  (+495 more)
data/spotify/: 2017-2021 spotify data.parquet
datafortelling/: _quarto.yaml  index.qmd
datafortelling/_site/: index.html  search.json
datafortelling/pages/: 2025.qmd  TODO.qmd  data_setup.py  test.qmd
logging_utils/: config.json  logging_utils.py
notebooks/: artist insights.ipynb  discovery nostalgia.ipynb  duckdb.ipynb  filling_2025_gap.ipynb  fun and quirky.ipynb  habits over time.ipynb  lastfm.ipynb  listenining sessions.ipynb  song and album stats.ipynb  spotify data conversion.ipynb
plots/: activity_graph.py  data_setup.py
streamlit/: analysis_utils.py  data_utils.py  main.py
streamlit/todo/: todo.py
streamlit/yearly analysis/: analysis_2025.py  overview.py  yearly_overview.py
(+620 files in other folders)
