[project]
name = "music-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pendulum>=3.2.0",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
